   manually cast to a type by using a cast function.

 - Table ``information_schema.table_constraints`` is now returning
   ``constraint_name`` as type string instead of type array. Constraint type
   ``PRIMARY_KEY`` has been changed to ``PRIMARY KEY``. Also PRIMARY KEY
   constraint is not returned when not explicitly defined.

Changes
=======

- Added new "password" authentication method which is available for connections
  via the Postgres Protocol. This method allowes clients to authenticate using
  a valid database user and its password.

- Added ``WITH`` clause to ``CREATE USER`` statement to specify user properties
  upon creation. The single property available right now is the ``password``
  property which can be used for "password" authentication. User passwords are
  never stored in clear-text inside CrateDB.

- The "address" field of the ``auth.host_based.config`` setting allows the
  special ``_local_`` identifier additionally to IP and CIDR notation.
  ``_local_`` matches both IPv4 and IPv6 connections from localhost.

- Clients using the postgres wire protocol will now receive an additional
  ``crate_version`` ``ParameterStatus`` message during the connection
  establishment. This can be used to identify the server as ``CrateDB``.

- Added support to manually retry the allocation of shards that failed to
  allocate using ``ALTER CLUSTER REROUTE RETRY FAILED``.

- Hadoop2 dependencies for HDFS repository plugin has been upgraded to 2.8.1.

- Added new cluster setting ``routing.rebalance.enable`` that allows to
  enable or disable shard rebalancing on the cluster.

- Table ``information_schema.key_column_usage`` now gets populated with primary
  key information of user tables.

- Table ``information_schema.table_constraints`` is now returning ``NOT_NULL``

- Fixed an issue that caused an error ``Primary key value must not be NULL``
  to be thrown when trying to insert rows in a table that has a generated